Change VSTS to Azure DevOps

--- a/index.cshtml
+++ b/index.cshtml
@@ -1,9 +1,9 @@
 ---
-Title: TFS & VSTS
-Description: Support for Team Foundation Server and Visual Studio Team Services.
+Title: TFS & Azure DevOps
+Description: Support for Team Foundation Server and Azure DevOps.
 ---
 <p>
-    Support for Team Foundation Server (TFS) and Visual Studio Team Services (VSTS) is implemented in the
+    Support for Team Foundation Server (TFS) and Azure DevOps is implemented in the
     <a href="https://www.nuget.org/packages/Cake.Issues.PullRequests.Tfs" target="_blank">Cake.Issues.PullRequests.Tfs addin</a>.
 </p>
 
