(GH-86) Add link to demo repositories

--- a/examples/index.cshtml
+++ b/examples/index.cshtml
@@ -4,4 +4,9 @@ Description: Examples for using the Cake.Issues.PullRequests.Tfs addin.
 ---
 <p>@Html.Raw(Model.String(DocsKeys.Description))</p>
 
+<div class="alert alert-info">
+There's a <a href="https://dev.azure.com/pberger/Cake.Issues-Demo" target="_blank">demo repository</a>
+available which you can fork and to which you can create pull requests to test the integration functionality.
+</div>
+
 @Html.Partial("_ChildPages")
