Update documentation to addin rename

--- a/docs/examples/index.cshtml
+++ b/docs/examples/index.cshtml
@@ -1,6 +1,6 @@
 ---
 Title: Examples
-Description: Examples for using the Cake.Issues.PullRequests.Tfs addin.
+Description: Examples for using the Cake.Issues.PullRequests.AzureDevOps addin.
 ---
 <p>@Html.Raw(Model.String(DocsKeys.Description))</p>
 
