--- a/docs/index.cshtml
+++ b/docs/index.cshtml
@@ -1,10 +1,10 @@
 ---
-Title: TFS & Azure DevOps
-Description: Support for Team Foundation Server and Azure DevOps.
+Title: Azure DevOps
+Description: Support for Azure DevOps.
 ---
 <p>
-    Support for Team Foundation Server (TFS) and Azure DevOps is implemented in the
-    <a href="https://www.nuget.org/packages/Cake.Issues.PullRequests.Tfs" target="_blank">Cake.Issues.PullRequests.Tfs addin</a>.
+    Support for Azure DevOps is implemented in the
+    <a href="https://www.nuget.org/packages/Cake.Issues.PullRequests.AzureDevOps" target="_blank">Cake.Issues.PullRequests.AzureDevOps addin</a>.
 </p>
 
 @Html.Partial("_ChildPages")
